[package]
name = "rusty-tweet-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.1.0"
dialoguer = "0.11.0"
dotenv = "0.15.0"
indicatif = "0.17.7"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }

[[bin]]
name = "rtc"
path = "src/main.rs"

[[bin]]
name = "rusty-tweet-cli"
path = "src/main.rs"
